src/main/java/com/example/boilerplate/core/support/error/ErrorCode.java
package com.example.boilerplate.core.support.error;

public enum ErrorCode {
    TEST
}
